--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
   <color name="colorPrimary">#023c69</color>
   <color name="splashscreen_background">#FFFFFF</color>
   <color name="colorPrimaryDark">#FFFFFF</color>
+  <color name="notification_icon_color">#ffffff</color>
 </resources>
